trunk/Archive2/c7/782d8e2dce24d4/output
main.cpp:14:16: error: cannot cast 'CanData' to its protected base class 'Header'
  Header *pt = new CanData();
               ^
main.cpp:7:17: note: declared protected here
class CanData : protected Header
                ^~~~~~~~~~~~~~~~
1 error generated.
